# skifree

./: .gitignore  CMakeLists.txt  README.md  skifree.ini.example
cmake/: EmbedResources.cmake
src/: ai.c  ai.h  config.c  config.h  consts.h  input_bind.c  input_bind.h  menu_gui.cpp  menu_gui.h  net.c  net.h  physics.c  physics.h  replay.c  replay.h  resource.h  resources.c  resources.h  saveload.c  saveload.h  skifree.c  skifree.h  sound.c  sound.h  types.h  win32_dialogs.c  win32_dialogs.h  win32_menu.c  win32_menu.h
tools/: extract_resources.py
